portfolio html and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>About Me</title>
+    <title>Portfolio</title>
 </head>
 <body background="assets/images/clouds.jpg" background-properties="fixed"></body>
 
@@ -36,15 +36,36 @@
 
     <div class="wrapper">
         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 main">
-                <h2>About Me</h2>
+                <h2>Portfolio</h2>
                 <div class="line"></div>
-                <div class="row">
-                <img class="pic col-lg-7 col-md-7 col-sm-12 col-xs-12" src="assets/images/headshot.jpg" alt="Hi">
+                <div>
+                        <ul class="check">
+                                <div class="hold">
+                                        <li><div class="yes">
+                                                <img src="assets/images/hangman.gif">
+                                                <div class="please">Hangman</div>
+                                        </div></li>
+                                        <li><div class="yes">
+                                                <img src="assets/images/rpg.jpg" height="250" width="250">
+                                                <div class="please">RPG Game</div>
+                                        </div></li>
+                                        <li><div class="yes">
+                                                <img src="assets/images/trivia.png" height="250" width="250">
+                                                <div class="please">Trivia Game</div>
+                                        </div></li>
+                                        <li><div class="yes">
+                                                <img src="assets/images/rutgers.jpg" height="250" width="250">
+                                                <div class="please">Rutgers Info Widget</div>
+                                        </div></li>
+                                        <li><div class="yes">
+                                                <img src="assets/images/rock.jpg" width="250" height="250">
+                                                <div class="please">Rock, Paper, Scissors</div>
+                                        </div></li>
                 
-                <p class="pic">My name is <strong>Jon Gilbert</strong>. I used to do web design regularly in high school and college. Since college, however, I've shifted over to the artistic and managerial sides of the software industry. I'm now returning to programming, so that I may lead tech teams more effectively and ultimately go on to program my own videogames.
-                <br /> <br /> These classes at <strong>UCI</strong> mark my official return to programming. After garduating from the class, I will pursue new tech management opportunities, and begin taking <strong>Unity</strong> game development courses online. From then on, I hope to undertake freelance web development projects and begin programming my own videogames and apps.</p>
+                                </div>
+                        </ul>
                 </div>
-                </div>
+        </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 side">
             <h3>Connet With Me</h3>
                 <div class="line"></div>
