--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
                       <h1>Jon Gilbert</h1>
                   </div>
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">About Me</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="index.html">About Me</a></li>
+                    <li class="active"><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
                   </ul>
                 </div>
