--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,8 @@
                                                 <div class="please">Trivia Game</div>
                                         </div></li>
                                         <li><div class="yes">
-                                                <img src="assets/images/rutgers.jpg" height="250" width="250">
-                                                <div class="please">Rutgers Info Widget</div>
+                                                <img src="assets/images/crystal.png" height="250" width="250">
+                                                <div class="please"><a href="https://crenzio.github.io/Week-4-Game/">Crystal Collector</a></div>
                                         </div></li>
                                         <li><div class="yes">
                                                 <img src="assets/images/rock.jpg" width="250" height="250">
