--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                                         </div></li>
                                         <li><div class="yes">
                                                 <img src="assets/images/trivia.png" height="250" width="250">
-                                                <div class="please">Trivia Game</div>
+                                                <div class="please"><a href="https://crenzio.github.io/Trivia/">Trivia Game</a></div>
                                         </div></li>
                                         <li><div class="yes">
                                                 <img src="assets/images/crystal.png" height="250" width="250">
