--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,8 @@
                         <ul class="check">
                                 <div class="hold">
                                         <li><div class="yes">
-                                                <img src="assets/images/hangman.gif">
-                                                <div class="please">Hangman</div>
+                                                <img src="assets/images/liri.jpg" height="250" width="250">
+                                                <div class="please"><a href="https://github.com/Crenzio/liri-node-app">LIRI (Your Digital Assistant)</a></div>
                                         </div></li>
                                         <li><div class="yes">
                                                 <img src="assets/images/rpg.jpg" height="250" width="250">
