adding SQL link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,10 @@
                                                 <img src="assets/images/giphy.jpg" width="250" height="250">
                                                 <div class="please"><a href="https://crenzio.github.io/GIPHY/">GIPHY Game Image Finder</a></div>
                                         </div></li>
-                
+                                        <li><div class="yes">
+                                                <img src="assets/images/sql.png" width="250" height="250">
+                                                <div class="please"><a href="https://github.com/Crenzio/BAmazon.git">Shady Amazon Store</a></div>
+                                        </div></li>
                                 </div>
                         </ul>
                 </div>
