adding friend finder link

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,92 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=yes">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=yes">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Portfolio</title>
+        <title>Portfolio</title>
 </head>
+
 <body background="assets/images/clouds.jpg" background-properties="fixed"></body>
 
 <header>
 
-    <div class="400">
+        <div class="400">
 
-        <nav class="navbar navbar-default" class="col-lg-12 col-md-12 col-sm-12 col-es-12">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                      <h1>Jon Gilbert</h1>
-                  </div>
-                  <ul class="nav navbar-nav">
-                    <li><a href="index.html">About Me</a></li>
-                    <li class="active"><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                  </ul>
-                </div>
-              </nav>
+                <nav class="navbar navbar-default" class="col-lg-12 col-md-12 col-sm-12 col-es-12">
+                        <div class="container-fluid">
+                                <div class="navbar-header">
+                                        <h1>Jon Gilbert</h1>
+                                </div>
+                                <ul class="nav navbar-nav">
+                                        <li>
+                                                <a href="index.html">About Me</a>
+                                        </li>
+                                        <li class="active">
+                                                <a href="portfolio.html">Portfolio</a>
+                                        </li>
+                                        <li>
+                                                <a href="contact.html">Contact</a>
+                                        </li>
+                                </ul>
+                        </div>
+                </nav>
 
-    </div>
+        </div>
 
 </header>
 
-    <div class="wrapper">
+<div class="wrapper">
         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 main">
                 <h2>Portfolio</h2>
                 <div class="line"></div>
                 <div>
                         <ul class="check">
                                 <div class="hold">
-                                        <li><div class="yes">
-                                                <img src="assets/images/liri.jpg" height="250" width="250">
-                                                <div class="please"><a href="https://github.com/Crenzio/liri-node-app">LIRI (Your Digital Assistant)</a></div>
-                                        </div></li>
-                                        <li><div class="yes">
-                                                <img src="assets/images/rpg.jpg" height="250" width="250">
-                                                <div class="please">RPG Game</div>
-                                        </div></li>
-                                        <li><div class="yes">
-                                                <img src="assets/images/trivia.png" height="250" width="250">
-                                                <div class="please"><a href="https://crenzio.github.io/Trivia/">Trivia Game</a></div>
-                                        </div></li>
-                                        <li><div class="yes">
-                                                <img src="assets/images/crystal.png" height="250" width="250">
-                                                <div class="please"><a href="https://crenzio.github.io/Week-4-Game/">Crystal Collector</a></div>
-                                        </div></li>
-                                        <li><div class="yes">
-                                                <img src="assets/images/rock.jpg" width="250" height="250">
-                                                <div class="please">Rock, Paper, Scissors</div>
-                                        </div></li>
-                                        <li><div class="yes">
-                                                <img src="assets/images/giphy.jpg" width="250" height="250">
-                                                <div class="please"><a href="https://crenzio.github.io/GIPHY/">GIPHY Game Image Finder</a></div>
-                                        </div></li>
-                                        <li><div class="yes">
-                                                <img src="assets/images/sql.png" width="250" height="250">
-                                                <div class="please"><a href="https://github.com/Crenzio/BAmazon.git">Shady Amazon Store</a></div>
-                                        </div></li>
+                                        <li>
+                                                <div class="yes">
+                                                        <img src="assets/images/liri.jpg" height="250" width="250">
+                                                        <div class="please">
+                                                                <a href="https://github.com/Crenzio/liri-node-app">LIRI (Your Digital Assistant)</a>
+                                                        </div>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div class="yes">
+                                                        <img src="assets/images/rpg.jpg" height="250" width="250">
+                                                        <div class="please">RPG Game</div>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div class="yes">
+                                                        <img src="assets/images/trivia.png" height="250" width="250">
+                                                        <div class="please">
+                                                                <a href="https://crenzio.github.io/Trivia/">Trivia Game</a>
+                                                        </div>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div class="yes">
+                                                        <img src="assets/images/crystal.png" height="250" width="250">
+                                                        <div class="please">
+                                                                <a href="https://crenzio.github.io/Week-4-Game/">Crystal Collector</a>
+                                                        </div>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div class="yes">
+                                                        <img src="assets/images/rock.jpg" width="250" height="250">
+                                                        <div class="please">Rock, Paper, Scissors</div>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div class="yes">
+                                                        <img src="assets/images/giphy.jpg" width="250" height="250">
+                                                        <div class="please">
+                                                                <a href="https://crenzio.github.io/GIPHY/">GIPHY Game Image Finder</a>
+                                                        </div>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div class="yes">
+                                                        <img src="assets/images/sql.png" width="250" height="250">
+                                                        <div class="please">
+                                                                <a href="https://github.com/Crenzio/BAmazon.git">Shady Amazon Store</a>
+                                                        </div>
+                                                </div>
+                                        </li>
+                                        <li>
+                                                <div class="yes">
+                                                        <img src="assets/images/friendfinder.png" width="250" height="250">
+                                                        <div class="please">
+                                                                <a href="https://radiant-forest-60948.herokuapp.com">Friend Finder</a>
+                                                        </div>
+                                                </div>
+                                        </li>
                                 </div>
                         </ul>
                 </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 side">
-            <h3>Connet With Me</h3>
+                <h3>Connet With Me</h3>
                 <div class="line"></div>
                 <div class="table">
-                    <ul>
-                        <li><a href="https://github.com/Crenzio"><img src="assets/images/git.png" class="nospace"></a></li>
-                        <li><a href="https://www.linkedin.com/in/jonathan-gilbert-2395ba94/"><img src="assets/images/linkedin.png" class="nospace"></a></li>
-                        <li><a href="https://stackoverflow.com/users/9314100/jonathan-gilbert"><img src="assets/images/stack.png" height="64" width="64" class="nospace"></a></li>
-                    </ul>
+                        <ul>
+                                <li>
+                                        <a href="https://github.com/Crenzio">
+                                                <img src="assets/images/git.png" class="nospace">
+                                        </a>
+                                </li>
+                                <li>
+                                        <a href="https://www.linkedin.com/in/jonathan-gilbert-2395ba94/">
+                                                <img src="assets/images/linkedin.png" class="nospace">
+                                        </a>
+                                </li>
+                                <li>
+                                        <a href="https://stackoverflow.com/users/9314100/jonathan-gilbert">
+                                                <img src="assets/images/stack.png" height="64" width="64" class="nospace">
+                                        </a>
+                                </li>
+                        </ul>
                 </div>
 
         </div>
-    </div>
-   
+</div>
+
 
 </body>
+
 </html>
